# flask_server

./: .gitignore  README.md  hello.py  pyproject.toml  pyrightconfig.json  setup.py
billy_flask/: __init__.py  db.py  slack.py  spotify.py  twitch.py  twitter.py  util.py  youtube.py
billy_flask/blueprints/: template.py
billy_flask/blueprints/discord/: __init__.py
billy_flask/blueprints/misc/: __init__.py
billy_flask/blueprints/misc/static/: kick.webm
billy_flask/blueprints/misc/templates/: gin.html  social.html  thanksmom.html  video.html  video_plyr.html
billy_flask/blueprints/mtga/: __init__.py
billy_flask/blueprints/mtga/templates/: rankinfo.html
billy_flask/blueprints/slack/: __init__.py
billy_flask/blueprints/slack/static/: slack_media
billy_flask/blueprints/spotify/: __init__.py
billy_flask/blueprints/spotify/templates/: new_albums.html  new_albums_body.html  top.html
billy_flask/blueprints/twitch/: __init__.py  util.py
billy_flask/blueprints/twitch/static/: ff  main.css
billy_flask/blueprints/twitch/templates/: ff.html  hls-test.html  twitch_auth.html  (+2 more)
billy_flask/blueprints/twitter/: __init__.py
billy_flask/blueprints/uyd/: __init__.py
billy_flask/blueprints/vine/: __init__.py
billy_flask/blueprints/warframe/: __init__.py
billy_flask/blueprints/youtube/: __init__.py
billy_flask/schema/: slack.sql  twitch.sql  twitter.sql
billy_flask/static/twitch/: main.css
billy_flask/templates/twitch/: twitch_surf.html
billy_flask/templates/twitter/: twitter_likes.html
configs/: flask-server.service
instance/: config.cfg.example
(+15 files in other folders)
