[project]
name = "flask-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask",
    "setuptools",
    "requests",
    "furl",
    "pymysql",
    "requests_oauthlib",
    "pynacl",
    "flask-cors",
    "gunicorn",
]

[project.scripts]
example-pkg = "gunicorn -t 120 -b127.0.0.1:5000 'billy_flask:create_app()'"
