[project]
name = "flask-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "furl>=2.1.3",
    "gunicorn>=23.0.0",
    "humanize>=4.11.0",
    "pymysql>=1.1.1",
    "pynacl>=1.5.0",
    "pytesseract>=0.3.13",
    "requests>=2.31.0",
    "requests-oauthlib>=2.0.0",
    "setuptools>=75.8.0",
]
